# projet-commun

./: .clang-format  CONTRIBUTING.md  LICENSE  README.md  TODO.md  meson.build
client/: main.c  meson.build
include/: error.h
include/net/: socket.h
net/: socket_posix.c  socket_win32.c
server/: main.c  meson.build
